--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <a class="nav-link" href="#backpack">Backpack</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link enable">Subscribe</a>
+          <a class="nav-link enable" href="#subscribe">Subscribe</a>
         </li>
       </ul>
     </div>
@@ -50,7 +50,7 @@
           <button class="buy-now-button">Buy Now</button>
         </div>
         <div class="col-md-5">
-          <img src="images/banner-images/headphone.png" class="d-block w-106" style="height:550px;">
+          <img src="images/banner-images/headphone.png" class="d-block w-100">
         </div>
       </div>
     </div>
@@ -90,7 +90,128 @@
     <span class="visually-hidden">Next</span>
   </button>
 </div>
+</div>
+
+<div class="container categories">
+  <div class="row">
+    <div class="col-md-4">
+     <div class="watch-bg d-flex justify-content-between d-flex align-items-center">
+      <h1>Watch</h1>
+      <img src="images/categories/watch.png" alt="">
+     </div>
+    </div>
+    <div class="col-md-4">
+      <div class="bag-bg d-flex justify-content-between d-flex align-items-center">
+        <h1>Bag</h1>
+        <img src="images/categories/bag.png" alt="">
+      </div>
+    </div>
+    <div class="col-md-4">
+      <div class="shoes-bg d-flex justify-content-between d-flex align-items-center">
+        <h1>Shoes</h1>
+        <img src="images/categories/shoes.png" alt="">
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="container shoes" id="shoes">
+  <h5>Shoes</h5>
+  <div class="row row-cols-1 row-cols-md-3 g-4">
+    <div class="col">
+      <div class="card">
+        <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Supply 350</h5>
+          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional.</p>
+          <h1>$120</h1>
+          <button class="buy-now-button">Buy Now >></button>
+        </div>
+      </div>
+    </div>
+    <div class="col">
+      <div class="card">
+        <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Nike 360</h5>
+          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional.</p>
+          <h1>$320</h1>
+          <button class="buy-now-button">Buy Now >></button>
+        </div>
+      </div>
+    </div>
+    <div class="col">
+      <div class="card">
+        <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Red Airmax</h5>
+          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional.</p>
+          <h1>$350</h1>
+          <button class="buy-now-button">Buy Now >></button>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="container" id="backpack">
+  <h3>Backpack</h3>
+  <div class="row row-cols-1 row-cols-md-3 g-4">
+    <div class="col">
+      <div class="card h-100">
+        <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Red Laltu Bag</h5>
+          <h5>$120</h5>
+          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        </div>
+        <div class="card-footer">
+          <button class="buy-now-button">Buy Now >></button>
+        </div>
+      </div>
+    </div>
+    <div class="col">
+      <div class="card h-100">
+        <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Blue Niltu Bag</h5>
+          <h5>$320</h5>
+          <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+        </div>
+        <div class="card-footer">
+          <button class="buy-now-button">Buy Now >></button>
+        </div>
+      </div>
+    </div>
+    <div class="col">
+      <div class="card h-100">
+        <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Black Kaltu Bag</h5>
+          <h5>$169</h5>
+          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+        </div>
+        <div class="card-footer">
+          <button class="buy-now-button">Buy Now >></button>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
    </div>
+
+   <div class="container orange-bg d-flex align-items-center justify-content-center" id="subscribe">
+     <div>
+       <h1>LET'S STAY IN TOUCH</h1>
+       <h6>Get updates on sales, specials and more</h6>
+       <input type="email" class="form-control" name="Enter your email" id="">       
+       <button class="buy-now-button">Submit</button>
+     </div>
+   </div>
+
+   <footer>
+     <small>©2020. Panda Commerce. All rights reserved. Sofia, Bulgaria.</small>
+   </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
 </body>
